base/src/test/resources/failure/scope/issue274.aya.txt
In file $FILE:3:4 ->

  1 | data Z : Type
  2 |   | zero
  3 |   | zero
          ^--^

Error: Redefinition of constructor `zero`

Parsing interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
